--- a/src/Nuages.Identity.UI/appsettings.json
+++ b/src/Nuages.Identity.UI/appsettings.json
@@ -54,6 +54,8 @@
       "AutoExpirePasswordDelayInDays": 60,
       "SupportsLoginWithEmail": true,
       "AutoConfirmExternalLogin": true,
+      "EnablePasswordHistory" : "true",
+      "PasswordHistoryCount": 5,
       "Audiences": [
         "IdentityAPI"
       ],
