--- a/src/Nuages.Identity.UI/appsettings.json
+++ b/src/Nuages.Identity.UI/appsettings.json
@@ -8,6 +8,21 @@
       "WebOptimizer.AssetMiddleware" : "Error"
     }
   },
+  "NLog":
+  {
+    "targets" :  {
+      "logconsole" : {
+        "type" : "Console"
+      }
+    },
+    "rules":[
+      {
+        "logger": "*",
+        "minLevel": "Information",
+        "writeTo": "logconsole"
+      }
+    ]
+  },
   "AllowedHosts": "*",
   "webOptimizer": {
     "enableCaching": true,
@@ -19,7 +34,8 @@
   },
   "AllowedCorsDomain" : null,
   "Nuages": {
-    "MessageService": {
+    "UseAWS" : false,
+    "MessageService": {      
       "SendFromEmail": "",
       "DefaultCulture": "en"
     },
@@ -83,11 +99,11 @@
     },
     "ApplicationConfig": {
       "ParameterStore": {
-        "Enabled": true,
+        "Enabled": false,
         "Path": "/NuagesIdentity"
       },
       "AppConfig": {
-        "Enabled": true,
+        "Enabled": false,
         "ApplicationId": "NuagesIdentity",
         "EnvironmentId": "Prod",
         "ConfigProfileId": "WebUI"
