--- a/src/Nuages.Identity.UI/appsettings.json
+++ b/src/Nuages.Identity.UI/appsettings.json
@@ -85,7 +85,7 @@
       }
     },
     "OpenIdDict": {
-      "Storage": "InMemory",
+      "Storage": null,
       "ConnectionString": "",
       "Database": "",
       "EncryptionKey": "",
