--- a/src/Nuages.Identity.UI/appsettings.json
+++ b/src/Nuages.Identity.UI/appsettings.json
@@ -57,7 +57,7 @@
       "ShowRegistration": true,
       "ExternalLoginAutoEnrollIfEmailExists": true,
       "ExternalLoginPersistent": true,
-      "EnablePasswordless": true,
+      "EnableMagicLink": true,
       "EnablePhoneFallback": true,
       "Enable2FARememberDevice": true,
       "EnableFido2": true,
