--- a/src/Nuages.Identity.UI/appsettings.json
+++ b/src/Nuages.Identity.UI/appsettings.json
@@ -86,7 +86,8 @@
     },
     "OpenIdDict": {
       "EncryptionKey": "",
-      "SigningKey": ""
+      "SigningKey": "",
+      "CreateDemoClients" : true
     },
     "Web": {
       "GoogleRecaptcha": {
