--- a/src/Nuages.Identity.UI/appsettings.json
+++ b/src/Nuages.Identity.UI/appsettings.json
@@ -42,7 +42,8 @@
     "Data" :
     {
       "Storage": "InMemory",
-      "ConnectionString" : ""
+      "ConnectionString" : "",
+      "Redis" : ""
     },
     "Localization": {
       "DefaultCulture": "fr-CA",
