--- a/src/Nuages.Identity.UI/appsettings.json
+++ b/src/Nuages.Identity.UI/appsettings.json
@@ -5,7 +5,7 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information",
-      "WebOptimizer.AssetMiddleware" : "Error"
+      "WebOptimizer.*" : "Error"
     }
   },
   "NLog":
