Add KeyStore + GitHub OAuth

--- a/src/Nuages.Identity.UI/appsettings.json
+++ b/src/Nuages.Identity.UI/appsettings.json
@@ -64,7 +64,8 @@
     "OpenIdDict": {
       "EncryptionKey": "",
       "SigningKey": "",
-      "CreateDemoClients" : true
+      "CreateDemoClients" : true,
+      "KeySize" : 2048
     },
     "Web": {
       "GoogleRecaptcha": {
