--- a/src/Nuages.Identity.UI/Nuages.Identity.UI.csproj
+++ b/src/Nuages.Identity.UI/Nuages.Identity.UI.csproj
@@ -15,6 +15,7 @@
     <ItemGroup>
         <PackageReference Include="Amazon.Lambda.AspNetCoreServer.Hosting" Version="1.1.0" />
         <PackageReference Include="AspNet.Security.OAuth.GitHub" Version="6.0.5" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="6.0.4" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.Twitter" Version="6.0.4" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.3">
           <PrivateAssets>all</PrivateAssets>
