--- a/src/Nuages.Identity.UI/appsettings.json
+++ b/src/Nuages.Identity.UI/appsettings.json
@@ -89,6 +89,22 @@
       "Google": {
         "ClientId": "",
         "ClientSecret": ""
+      },
+      "GitHub": {
+        "ClientId": "",
+        "ClientSecret": ""
+      },
+      "Twitter": {
+        "ConsumerKey": "",
+        "ConsumerSecret": ""
+      },
+      "Facebook": {
+        "AppId": "",
+        "AppSecret": ""
+      },
+      "Microsoft": {
+        "ClientId": "",
+        "ClientSecret": ""
       }
     }
   },
