--- a/src/Nuages.Identity.UI/Nuages.Identity.UI.csproj
+++ b/src/Nuages.Identity.UI/Nuages.Identity.UI.csproj
@@ -1,10 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
-        <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
-        <AWSProjectType>Lambda</AWSProjectType>
-        <!-- This property makes the build directory similar to a publish directory and helps the AWS .NET Lambda Mock Test Tool find project dependencies. -->
-        <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+        <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>  
         <Nullable>enable</Nullable>
         <ImplicitUsings>true</ImplicitUsings>
         <PublishReadyToRun>true</PublishReadyToRun>
@@ -13,7 +10,6 @@
         <Exec Command="npm run css:build" />
     </Target>
     <ItemGroup>
-        <PackageReference Include="Amazon.Lambda.AspNetCoreServer.Hosting" Version="1.1.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.3">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -44,18 +40,14 @@
        
         <PackageReference Include="Macross.Json.Extensions" Version="2.2.0" />
     </ItemGroup>
-    <ItemGroup>        
-        <PackageReference Include="Amazon.AspNetCore.DataProtection.SSM" Version="2.1.0" />
-        <PackageReference Include="Amazon.Extensions.Configuration.SystemsManager" Version="3.0.0" />
-        <PackageReference Include="AWS.Logger.NLog" Version="3.1.0" />
-    </ItemGroup>
+  
     <ItemGroup>
         <PackageReference Include="Nuages.Web" Version="1.3.16" />
-        <PackageReference Include="Nuages.Localization" Version="1.4.4" />
-        <PackageReference Include="Nuages.AWS" Version="1.0.12" />
+        <PackageReference Include="Nuages.Localization" Version="1.4.4" />       
         <PackageReference Include="Nuages.AspNetIdentity.Stores.Mongo" Version="1.0.8" />
     </ItemGroup>
     <ItemGroup>
+        <ProjectReference Include="..\Nuages.Identity.Services.AWS\Nuages.Identity.Services.AWS.csproj" />
         <ProjectReference Include="..\Nuages.Fido2.Storage.Mongo\Nuages.Fido2.Storage.Mongo.csproj" />
         <ProjectReference Include="..\Nuages.Identity.Services\Nuages.Identity.Services.csproj" />
         <ProjectReference Include="..\Nuages.Identity.Storage.MySql\Nuages.Identity.Storage.MySql.csproj" />
