ADD LAMBDA HOSTING

--- a/src/Nuages.Identity.UI/Nuages.Identity.UI.csproj
+++ b/src/Nuages.Identity.UI/Nuages.Identity.UI.csproj
@@ -5,11 +5,13 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>true</ImplicitUsings>
         <PublishReadyToRun>true</PublishReadyToRun>
+        <AWSProjectType>Lambda</AWSProjectType>
     </PropertyGroup>
     <Target Name="Tailwind" BeforeTargets="Build">
         <Exec Command="npm run css:build" />
     </Target>
     <ItemGroup>
+        <PackageReference Include="Amazon.Lambda.AspNetCoreServer.Hosting" Version="1.0.0"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.4">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
