--- a/src/Nuages.Identity.UI/appsettings.json
+++ b/src/Nuages.Identity.UI/appsettings.json
@@ -31,7 +31,7 @@
       ]
     },
     "UI": {
-      "ShowRegistration": true,
+      "AllowSelfRegistration": true,
       "ExternalLoginAutoEnrollIfEmailExists": true,
       "ExternalLoginPersistent": true,
       "EnableMagicLink": true,
