--- a/src/Nuages.Identity.Services/Nuages.Identity.Services.csproj
+++ b/src/Nuages.Identity.Services/Nuages.Identity.Services.csproj
@@ -7,6 +7,8 @@
     </PropertyGroup>
     <ItemGroup>
      
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.4" />
+     
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.4" />
         <PackageReference Include="Nuages.Localization" Version="1.4.5" />
         <PackageReference Include="Nuages.Web" Version="1.3.17" />
