--- a/src/Nuages.Identity.UI/appsettings.json
+++ b/src/Nuages.Identity.UI/appsettings.json
@@ -59,11 +59,11 @@
         "RequireUppercase": true,
         "RequireDigit": true,
         "RequiredUniqueChars": 1
-      }
+      },
+      "EncryptionKey": "",
+      "SigningKey": ""
     },
     "OpenIdDict": {
-      "EncryptionKey": "",
-      "SigningKey": "",
       "CreateDemoClients" : true,
       "KeySize" : 2048
     },
