--- a/src/Nuages.Identity.UI/appsettings.json
+++ b/src/Nuages.Identity.UI/appsettings.json
@@ -61,11 +61,11 @@
         "RequiredUniqueChars": 1
       },
       "EncryptionKey": "",
-      "SigningKey": ""
+      "SigningKey": "",
+      "KeySize" : 2048
     },
     "OpenIdDict": {
-      "CreateDemoClients" : true,
-      "KeySize" : 2048
+      "CreateDemoClients" : true
     },
     "Web": {
       "GoogleRecaptcha": {
