--- a/src/Nuages.Identity.UI/appsettings.json
+++ b/src/Nuages.Identity.UI/appsettings.json
@@ -4,6 +4,7 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information",
+      "System.Net.Http.HttpClient" : "Warning",
       "WebOptimizer.*" : "Error"
     }
   },
