--- a/src/Nuages.Identity.UI/Nuages.Identity.UI.csproj
+++ b/src/Nuages.Identity.UI/Nuages.Identity.UI.csproj
@@ -36,7 +36,7 @@
         <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
         <PackageReference Include="NLog" Version="4.7.15" />         
         <PackageReference Include="LigerShark.WebOptimizer.Core" Version="3.0.357" />
-       
+        <PackageReference Include="NSwag.AspNetCore" Version="13.15.10" />
         <PackageReference Include="Macross.Json.Extensions" Version="2.2.0" />
     </ItemGroup>
   
