--- a/src/Nuages.Identity.UI/appsettings.json
+++ b/src/Nuages.Identity.UI/appsettings.json
@@ -43,7 +43,7 @@
     },
     "Identity": {
       "Name": "Nuages",
-      "Authority": "https://localhost:8001",
+      "Authority": "https://localhost:8001/",
       "SupportsAutoPasswordExpiration": true,
       "AutoExpirePasswordDelayInDays": 60,
       "SupportsLoginWithEmail": true,
