Fix test configuration override

--- a/src/Nuages.Identity.UI/appsettings.json
+++ b/src/Nuages.Identity.UI/appsettings.json
@@ -12,6 +12,7 @@
   
   "Nuages": {
     "UseAWS" : false,
+    "UseCookiePolicy" : true,
     "AllowedCorsDomain" : null,
     "MessageService": {      
       "SendFromEmail": "",
