--- a/src/Nuages.Identity.Services.Tests/Nuages.Identity.Services.Tests.csproj
+++ b/src/Nuages.Identity.Services.Tests/Nuages.Identity.Services.Tests.csproj
@@ -24,6 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\Nuages.Identity.Services.AWS\Nuages.Identity.Services.AWS.csproj" />
         <ProjectReference Include="..\Nuages.Identity.Services\Nuages.Identity.Services.csproj" />
     </ItemGroup>
 
