--- a/src/Nuages.Identity.Services/Nuages.Identity.Services.csproj
+++ b/src/Nuages.Identity.Services/Nuages.Identity.Services.csproj
@@ -1,24 +1,25 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <OutputType>Library</OutputType>
     </PropertyGroup>
     <ItemGroup>
      
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.4" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.0" />
      
-        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.4" />
-        <PackageReference Include="Nuages.Localization" Version="1.4.5" />
-        <PackageReference Include="Nuages.Web" Version="1.3.17" />
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="[6.0.7]" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="[6.0.7]" />
+        <PackageReference Include="Nuages.Localization" Version="1.4.6" />
+        <PackageReference Include="Nuages.Web" Version="1.3.19" />
         <PackageReference Include="OpenIddict.AspNetCore" Version="3.1.1" />
         <PackageReference Include="OpenIddict.EntityFrameworkCore.Models" Version="3.1.1" />
         <PackageReference Include="System.Linq.Async" Version="6.0.1" />
-        <PackageReference Include="Fido2.AspNet" Version="3.0.0-beta2" />
+        <PackageReference Include="Fido2.AspNet" Version="[3.0.0-beta2]" />
 
   
-        <PackageReference Include="HtmlAgilityPack" Version="1.11.42" />
+        <PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
     </ItemGroup>
    
  
