--- a/src/Nuages.Identity.UI/Nuages.Identity.UI.csproj
+++ b/src/Nuages.Identity.UI/Nuages.Identity.UI.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>  
         <Nullable>enable</Nullable>
         <ImplicitUsings>true</ImplicitUsings>
@@ -9,41 +9,42 @@
         <Exec Command="npm run css:build" />
     </Target>
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.4">
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="[6.0.7]">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.4" />
+        <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="[6.0.7]" />
         <PackageReference Include="System.Linq.Async" Version="6.0.1" />
-        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.17.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.4" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.4" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.4" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.25.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="[6.0.7]" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="[6.0.7]" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="[6.0.7]" />
         
     </ItemGroup>    
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="6.0.4" />
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.MicrosoftAccount" Version="6.0.4" />
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.Twitter" Version="6.0.4" />
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="6.0.4" />
-        <PackageReference Include="AspNet.Security.OAuth.GitHub" Version="6.0.6" />
-        <PackageReference Include="Octokit" Version="0.50.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="7.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.MicrosoftAccount" Version="7.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.Twitter" Version="7.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="7.0.0" />
+        <PackageReference Include="AspNet.Security.OAuth.GitHub" Version="7.0.0" />
+        <PackageReference Include="Octokit" Version="4.0.1" />
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="OpenIddict.AspNetCore" Version="3.1.1" />
         <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="3.1.1" />
         <PackageReference Include="OpenIddict.MongoDb" Version="3.1.1" />
-        <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
-        <PackageReference Include="NLog" Version="4.7.15" />         
-        <PackageReference Include="LigerShark.WebOptimizer.Core" Version="3.0.357" />
-        <PackageReference Include="NSwag.AspNetCore" Version="13.15.10" />
-        <PackageReference Include="Macross.Json.Extensions" Version="2.2.0" />
+        <PackageReference Include="NLog.Web.AspNetCore" Version="5.1.5" />
+        <PackageReference Include="NLog" Version="5.0.5" />         
+        <PackageReference Include="LigerShark.WebOptimizer.Core" Version="3.0.372" />
+        <PackageReference Include="NSwag.AspNetCore" Version="13.17.0" />
+        <PackageReference Include="Macross.Json.Extensions" Version="3.0.0" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     </ItemGroup>
   
     <ItemGroup>
-        <PackageReference Include="Nuages.Web" Version="1.3.17" />
-        <PackageReference Include="Nuages.Localization" Version="1.4.5" />       
-        <PackageReference Include="Nuages.AspNetIdentity.Stores.Mongo" Version="1.0.10" />
+        <PackageReference Include="Nuages.Web" Version="1.3.19" />
+        <PackageReference Include="Nuages.Localization" Version="1.4.6" />       
+        <PackageReference Include="Nuages.AspNetIdentity.Stores.Mongo" Version="1.1.0" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\Nuages.Identity.Services.AWS\Nuages.Identity.Services.AWS.csproj" />
