Allow COnfigure EventBus

--- a/src/Nuages.Identity.UI/appsettings.json
+++ b/src/Nuages.Identity.UI/appsettings.json
@@ -18,6 +18,11 @@
       "SendFromEmail": "",
       "DefaultCulture": "en"
     },
+    "EventBus" :
+    {
+      "Source" : "nuages.identity",
+      "Name" : "nuages-identity-events"
+    },
     "Data" :
     {
       "Storage": "InMemory",
