EvenetBus is not disable by default when using AWS. Must set configuration element Nuages:EventBus:Name to activate

--- a/src/Nuages.Identity.UI/appsettings.json
+++ b/src/Nuages.Identity.UI/appsettings.json
@@ -20,8 +20,8 @@
     },
     "EventBus" :
     {
-      "Source" : "nuages.identity",
-      "Name" : "nuages-identity-events"
+      "Source" : null,
+      "Name" : null
     },
     "Data" :
     {
