--- a/src/Nuages.Identity.Services/Nuages.Identity.Services.csproj
+++ b/src/Nuages.Identity.Services/Nuages.Identity.Services.csproj
@@ -7,14 +7,14 @@
     </PropertyGroup>
     <ItemGroup>
      
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.1" />
      
-        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="[6.0.7]" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="[6.0.7]" />
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.1" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.1" />
         <PackageReference Include="Nuages.Localization" Version="1.4.6" />
-        <PackageReference Include="Nuages.Web" Version="1.3.19" />
-        <PackageReference Include="OpenIddict.AspNetCore" Version="3.1.1" />
-        <PackageReference Include="OpenIddict.EntityFrameworkCore.Models" Version="3.1.1" />
+        <PackageReference Include="Nuages.Web" Version="1.3.21" />
+        <PackageReference Include="OpenIddict.AspNetCore" Version="4.0.0" />
+        <PackageReference Include="OpenIddict.EntityFrameworkCore.Models" Version="4.0.0" />
         <PackageReference Include="System.Linq.Async" Version="6.0.1" />
         <PackageReference Include="Fido2.AspNet" Version="3.0.1" />
 
