Add Dummy cert support

--- a/src/Nuages.Identity.UI/appsettings.json
+++ b/src/Nuages.Identity.UI/appsettings.json
@@ -18,6 +18,10 @@
       "SendFromEmail": "",
       "DefaultCulture": "en"
     },
+    "Certificate":
+    {
+      "Enabled" : false
+    },
     "EventBus" :
     {
       "Source" : null,
