Include PEM in deployment

--- a/src/Nuages.Identity.UI/Nuages.Identity.UI.csproj
+++ b/src/Nuages.Identity.UI/Nuages.Identity.UI.csproj
@@ -66,7 +66,12 @@
         <Content Include="..\..\templates.json" CopyToOutputDirectory="Always">
             <Link>templates.json</Link>
         </Content>
-      
+        <Content Include="certs\cert.pem" CopyToOutputDirectory="Always">
+            <Link>templates.json</Link>
+        </Content>
+        <Content Include="certs\key.pem" CopyToOutputDirectory="Always">
+            <Link>templates.json</Link>
+        </Content>
     </ItemGroup>
    
 </Project>
