Change Audience process. Now validation is optional and Audience are auto. added to token

--- a/src/Nuages.Identity.UI/appsettings.json
+++ b/src/Nuages.Identity.UI/appsettings.json
@@ -61,6 +61,7 @@
       "AutoConfirmExternalLogin": true,
       "EnablePasswordHistory" : "true",
       "PasswordHistoryCount": 5,
+      "ValidateAudience" : false,
       "Audiences": [
         "IdentityAPI"
       ],
